# commit-poem

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.md  run-daily.sh
commitpoem/: __init__.py  backends.py  cli.py  config.py  github_client.py  image.py  poem.py  scheduler.py  slack.py
governance/: CONSTITUTION.md
tests/: conftest.py  test_backends.py  test_cli.py  test_config.py  test_github_client.py  test_image.py  test_poem.py  test_scheduler.py  test_slack.py
