[project]
name = "commitpoem"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "requests>=2.28",
    "anthropic",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
commitpoem = "commitpoem.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
